syntax = "proto3";
option go_package = "github.com/satont/twir/libs/grpc/generated/api/overlays_chat";
package api.overlays_chat;

message Settings {
	uint32 message_hide_timeout = 1;
	uint32 message_show_delay = 2;
	string preset = 3;
	uint32 font_size = 4;
	bool hide_commands = 5;
	bool hide_bots = 6;
	string font_family = 7;
	bool show_badges = 8;
	bool show_announce_badge = 9;
	string text_shadow_color = 10;
	uint32 text_shadow_size = 11;
	string chat_background_color = 12;
	string direction = 13;
}
